--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,46 +1,37 @@
 version: '3.8'
 
+volumes:
+  postgres-data:
+
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+        # Ensure that the variables in .env match the same variables in devcontainer.json
+        - .env
+
     volumes:
-      - mrf-workspace:/workspace
-      - cargo-cache:/usr/local/cargo
-      - target-cache:/workspace/target
+      - ../..:/workspaces:cached
+
+    # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
-    environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/mrf_db
-      RUST_LOG: debug
-      RUST_BACKTRACE: 1
-    depends_on:
-      - db
-    networks:
-      - mrf-network
-    # Add init to handle signal forwarding properly
-    init: true
+
+    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
+    network_mode: service:db
+
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: postgres:16-alpine
+    image: postgres:14.1
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mrf_db
-    ports:
-      - "5432:5432"
-    networks:
-      - mrf-network
+    env_file:
+        # Ensure that the variables in .env match the same variables in devcontainer.json
+        - .env
 
-volumes:
-  mrf-workspace:
-  postgres-data:
-  cargo-cache:
-  target-cache:
-
-networks:
-  mrf-network:
-    driver: bridge 
+    # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
