--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,12 +29,27 @@ chrono = { version = "0.4", features = ["serde"] }
 # Error handling
 thiserror = "2.0"
 
+# Async trait support
+async-trait = "0.1"
+
+# Futures utilities
+futures-util = "0.3"
+
 # Logging and tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+regex = "1.11.1"
+scraper = "0.23.1"
+urlencoding = "2.1.3"
+url = "2.5"
+tracing-test = "0.2.5"
+test-log = "0.2.17"
 
 [dev-dependencies]
 tokio-test = "0.4"
+tempfile = "3.5.0"
+criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
+mockito = "1.2"
 
 [profile.release]
 debug = true
